<resources>
    <string name="app_name">TestCreateNSignIn</string>
    <string name="logo">logo</string>
    <string name="book_manor">Book Manor</string>
    <string name="create_an_account">Create an account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="genre_icon1">genre_icon</string>
    <string name="books_button">Books</string>
    <string name="genres_button">Genres</string>
    <string name="folders_button">Folders</string>
    <string name="menu_books">BOOKS</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_help">HELP</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_exit">EXIT</string>
    <string name="menu_open">Open Menu</string>
    <string name="menu_close">Close Menu</string>
    <string name="profile">profile</string>
    <string name="title_activity_add_button">AddButton</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_all_genres">AllGenresActivity</string>
    <string name="poetry">POETRY</string>
    <string name="fiction">FICTION</string>
    <string name="romance">ROMANCE</string>
    <string name="comedy">COMEDY</string>
    <string name="add_genres">ADD GENRE</string>
    <string name="custom_genre_name">Custom Genre Name</string>
    <string name="insert_icon">Insert Icon</string>
    <string name="genre_icon">Genre Icon</string>
    <string name="num_books_hint">Number of Books Goal for Genre</string>
    <string name="create_genre">Create Genre</string>
    <string name="new_folder_in_genre">New Folder in Genre</string>
    <string name="add">Add</string>
    <string name="floating_button">floating_button</string>
    <string name="manage_account">Manage Account</string>
    <string name="all_folders">All Folders</string>
    <string name="view_by">view by</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="genres">Genres</string>
    <string name="new_book_in_folder">New Book in Folder</string>
    <string name="genreName">genreName</string>
    <string name="new_genre_category">New Genre Category</string>
    <string name="folderName">folderName</string>
    <string name="bookName">bookName</string>
    <string name="authorName">authorName</string>
    <string name="bookDate">date</string>
    <string name="add_folder">Add Folder</string>
    <string name="select_the_genre_category">Select the genre category</string>
    <string name="folder_name">Folder Name</string>
    <string name="custom_folder_name">custom folder name</string>
    <string name="add_new_folder">Add New Folder</string>
    <string name="genre_img_content_description">genre image content description</string>
    <string name="APP_INFO">APP INFO</string>
    <string name="set_a_goal">Set a Goal</string>
    <string name="view_all">View All</string>
    <string name="settings">SETTINGS</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notification">Notifications</string>
    <string name="help_and_support">Help and Support</string>
    <string name="app_info">App Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="MANAGE_ACCOUNT">MANAGE ACCOUNT</string>
    <string name="add_a_profile_picture">Add a Profile Picture</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="update_details">Update Details</string>
    <string name="delete_account">Delete Account</string>
    <string name="PROGRESS_NOTIFICATIONS">PROGRESS NOTIFICATIONS</string>
    <string name="receive_an_email">Receive an Email</string>
    <string name="receive_an_sms">Receive an SMS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_info_desc">The app is a book collections application that helps you store all the books you have. Book Manor makes it easier to keep track of every book item in your collection</string>
    <string name="book_manor_2022">Book Manor 2022</string>
    <string name="email">email</string>
    <string name="fullName">fullName</string>
    <string name="phone_number">phone number</string>
    <string name="manage">MANAGE</string>
    <string name="favourites">FAVOURITES</string>
    <string name="test_string">Testing</string>
    <string name="select_genre">Select Genre</string>
    <string name="folder_Name">Folder Name:</string>
    <string name="book_title">Book Title:</string>
    <string name="author">Author:</string>
    <string name="illustrator">Illustrator:</string>
    <string name="genre">Genre:</string>
    <string name="folder">Folder:</string>
    <string name="select_folder">Select Folder</string>
    <string name="insert_image">Insert Image</string>
    <string name="number_of_pages">Number of pages:</string>
    <string name="page_number_last_read">Page number last read:</string>
    <string name="add_new_book">Add New Book</string>
    <string name="select_genre_drop">Select Genre</string>
    <string name="tell_us_how_we_can_help">Tell us how we can help</string>
    <string name="send_email">Send Email</string>
    <string name="join_for_free_today">Join for free today</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="view_terms_and_conditions_here">View Terms and Conditions here</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="profileButton">profileButton</string>
    <string name="genre_label1">genre_label1</string>
    <string name="poetry_hearing">Poetry</string>
    <string name="genre_icon2">genre_icon2</string>
    <string name="genre_label2">genre_label2</string>
    <string name="fiction_heading">Fiction</string>
    <string name="genre_label3">genre_label3</string>
    <string name="drama">Drama</string>
    <string name="genre_icon3">genre_icon3</string>
    <string name="genre_label5">genre_label3</string>
    <string name="love">Love</string>
    <string name="genre_icon4">genre_icon3</string>
    <string name="genre_label4">genre_label3</string>
    <string name="heart_break">Heart break</string>
    <string name="genre_icon5">genre_icon3</string>
    <string name="genre_label">genre_label</string>
    <string name="humor">humor</string>
    <string name="genre_icon6">genre_icon3</string>
    <string name="q_where_can_i_add_a_profile">Q. Where can I add a profile?</string>
    <string name="home_screen_profile_icon_update_details"><![CDATA[Home screen > profile icon > update details]]></string>
    <string name="home_screen_menu_button_profile_add_profile_picture"><![CDATA[Home screen > menu button > profile > add profile picture]]></string>
    <string name="home_screen_settings_manage_account_add_profile_picture"><![CDATA[Home screen > settings > manage account > add profile picture]]></string>
    <string name="q_where_do_i_add_a_book">Q. Where do I add a book?</string>
    <string name="home_screen_plus_icon_button_add_book"><![CDATA[Home screen > plus icon button > add book]]></string>
    <string name="q_how_can_i_share_my_book_notes">Q. How can I share my book notes?</string>
    <string name="in_your_book_you_would_like_to_share_at_the_bottom_you_will_find_the_share_button_alternatively_you_can_select_your_book_in_the_books_section">In your book you would like to share at the bottom you will find the share button. Alternatively you can select your book in the books section</string>
    <string name="how_book_manor_works">How Book Manor Works</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="download_user_manual">Download User Manual</string>
    <string name="_1_create_a_custom_category_or_use_a_default_category">1. Create a custom category or use a default category.</string>
    <string name="_2_add_folders_within_that_category">2. Add folders within that category.</string>
    <string name="_3_add_books_in_the_folder">3. Add books in the folder.</string>
    <string name="_4_make_notes_about_the_book_and_organise">4. Make notes about the book and organise.</string>
    <string name="_5_organise_your_books_in_folders_and_categories">5. Organise your books in folders and categories.</string>
    <string name="add_profile_picture">Add a profile picture</string>
    <string name="update_detailsButton">update details</string>
    <string name="delete_accountButton">Delete account</string>
    <string name="profile_photo">profile_photo</string>
    <string name="categories">CATEGORIES</string>
    <string name="profile_ic">profile_ic</string>
    <string name="share_ic">share_ic</string>
    <string name="bell_ic">bell_ic</string>
    <string name="help_ic">help_ic</string>
    <string name="info_ic">info_ic</string>
    <string name="sign_out_ic">sign_out_ic</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here_create_an_account">New Here? Create an account.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
</resources>