<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="148dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="39dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFEFE"
        android:fontFamily="sans-serif-black"
        android:text="@string/book_manor"
        android:textColor="#000000"
        android:textSize="24sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/join_for_free_today"
                android:textColor="#332E2E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_an_account"
                android:textColor="#332E2E"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575"/>

            <EditText
                android:id="@+id/edtConfPassword"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <TextView
                android:id="@+id/txtDirectTermCond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/view_terms_and_conditions_here"
                android:textColor="#000000"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/agree_to_terms_and_conditions"
                android:clickable="true"
                android:focusable="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <Button
                android:id="@+id/btnCreateAcc"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#ECE7F1"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/create_account"
                android:textColor="#000000"
                app:cornerRadius="10dp"
                android:focusable="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/txtDirectSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="#000000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>