<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE9F4"
    tools:context=".ManageAccount">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar5"
            android:layout_width="409dp"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:background="@color/appColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="?attr/actionModeCloseDrawable"
            app:title="@string/MANAGE_ACCOUNT"
            app:titleMarginStart="60dp"
            app:titleTextColor="@color/black"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/profile_photo"
                app:srcCompat="@drawable/profile_icon" />

            <Button
                android:id="@+id/addProfilePictureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#E1BEE7"
                android:fontFamily="@font/alata"
                android:text="@string/add_profile_picture"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="10dp" />


            <EditText
                android:id="@+id/fullNameEt"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_full_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/updateDetailsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="#C5CAE9"
                android:fontFamily="@font/alata"
                android:text="@string/update_detailsButton"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/deleteAccountBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/browser_actions_bg_grey"
                android:fontFamily="@font/alata"
                android:text="@string/delete_accountButton"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>