<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="148dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="39dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFEFE"
        android:fontFamily="sans-serif-black"
        android:text="@string/book_manor"
        android:textColor="#000000"
        android:textSize="24sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back"
        android:textColor="#332E2E"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_into_your_account"
        android:textColor="#332E2E"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/txtDirectForgotPswrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text=" Forgot password?"
        android:textColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#ECE7F1"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/sign_in"
        android:textColor="#000000"
        app:cornerRadius="10dp"
        android:focusable="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/txtDirectCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/new_here_create_an_account"
        android:textColor="#000000" />

</LinearLayout>